<resources>
    <string name="app_name">Kotlin_Test</string>
    <string name="string_label_main_recommend">推荐</string>
    <string name="string_label_main_circle">圈子</string>
    <string name="string_label_main_my">我的</string>
    <string name="string_label_default_area">全国</string>

    <string name="string_hint_search_text">请输入酒吧名、风格或活动</string>
    <string name="string_label_near_by">附近</string>
    <string name="string_label_popularity">人气</string>
    <string name="string_label_environment">环境</string>
    <string name="string_label_filter">筛选</string>

    <string name="string_recycler_linear_layout_manage">android.support.v7.widget.LinearLayoutManager</string>
    <string name="string_recycler_grid_layout_manage">android.support.v7.widget.GridLayoutManager</string>
    <string name="string_app_bar_layout_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="string_label_club_booked">前往预定</string>
    <string name="string_label_club_detail">酒吧详情</string>
    <string name="string_label_offer">套餐优惠</string>
    <string name="string_label_amazing_events">精彩活动</string>
    <string name="string_message_scroll_more">继续拖动，查看更多信息</string>

</resources>
