<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="data"
            type="String"/>

        <variable
            name="adapter"
            type="com.sola.github.kotlin.kotlin_test.adapter.MainPagerAdapter"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/id_tab_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_label_main_recommend"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_label_main_circle"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_label_main_my"/>
        </android.support.design.widget.TabLayout>

        <!--<I-->

        <!--<com.sola.github.kotlin.tools.view.NoScrollViewPager-->
            <!--android:id="@+id/id_view_pager"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_marginBottom="0dp"-->
            <!--android:layout_marginLeft="0dp"-->
            <!--android:layout_marginRight="0dp"-->
            <!--android:layout_marginTop="0dp"-->
            <!--app:layout_constraintBottom_toTopOf="@+id/id_tab_layout"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--/>-->
    </android.support.constraint.ConstraintLayout>

</layout>