<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener"/>

        <variable
            name="adapter"
            type="com.sola.github.kotlin.tools.adapter.RecyclerBaseAdapter"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/id_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/id_recycler_view"-->
        <!--android:layout_width="368dp"-->
        <!--android:layout_height="0dp"-->
        <!--tools:layout_editor_absoluteX="8dp"-->
        <!--tools:layout_editor_absoluteY="8dp"/>-->

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:contentInsetStart="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include
                    layout="@layout/layout_header_feature_area"
                    app:listener="@{listener}"
                    />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/string_app_bar_layout_behavior">

            <com.sola.github.kotlin.tonight.view.DrawableCenterTextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@color/primary"
                android:drawableEnd="@drawable/ic_arrow_drop_down_48px"
                android:drawablePadding="1dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:text="@string/string_label_near_by"
                android:textColor="@color/accent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.sola.github.kotlin.tonight.view.DrawableCenterTextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:drawableEnd="@drawable/ic_arrow_drop_down_48px"
                android:drawablePadding="1dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:text="@string/string_label_popularity"
                android:textColor="@color/accent"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintLeft_toRightOf="@+id/textView3"
                app:layout_constraintRight_toLeftOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:layout_constraintVertical_bias="1.0"/>

            <com.sola.github.kotlin.tonight.view.DrawableCenterTextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:drawableEnd="@drawable/ic_arrow_drop_down_48px"
                android:drawablePadding="1dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:text="@string/string_label_environment"
                android:textColor="@color/accent"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintLeft_toRightOf="@+id/textView4"
                app:layout_constraintRight_toLeftOf="@+id/textView6"
                />

            <com.sola.github.kotlin.tonight.view.DrawableCenterTextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:drawableEnd="@drawable/ic_arrow_drop_down_48px"
                android:drawablePadding="1dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:text="@string/string_label_filter"
                android:textColor="@color/accent"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintLeft_toRightOf="@+id/textView5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:layout_constraintVertical_bias="1.0"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/id_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                app:adapter="@{adapter}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"/>

        </android.support.constraint.ConstraintLayout>

        <!--</android.support.design.widget.CoordinatorLayout>-->
        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="56dp"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--android:minHeight="?attr/actionBarSize"-->
        <!--android:theme="?attr/actionBarTheme"-->
        <!--app:contentInsetStart="0dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent">-->

        <!--<include-->
        <!--layout="@layout/layout_header_feature_area"-->
        <!--app:listener="@{listener}"-->
        <!--/>-->
        <!--</android.support.v7.widget.Toolbar>-->

    </android.support.design.widget.CoordinatorLayout>

</layout>